@@ -70,3 +70,16 @@ public class ZZ : Iface
 	void Iface.Foo () {
 	}
 }
+
+public class Generic<T> {
+
+}
+
+public class NonGeneric {
+
+	public static object Bla () 
+	{
+		Generic<int> f = new Generic<int> ();
+		return f;
+	}
+}
