@@ -2,6 +2,12 @@
 
 	* cli-tables-tests.md: Tests for module table.
 
+	* assembly-with-complex-type.cs: Added more stuff;
+
+2009-05-07 Rodrigo Kumpera  <rkumpera@novell.com>
+
+	* cli-tables-tests.md: Tests for module table.
+
 	* assembly-with-module.il: New file.
 
 	* Makefile: Add new dependencies.
